test/invalid/baseline/spaced-negative-infinity.txt
Syntax error at line 2, since `interface X`:
    const float infinity = - Infinity;
                           ^ Const lacks a value
